--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,7 +14,7 @@
     display: inline-block;
     width: 13px;
     height: 32px;
-    background-image: url(../svg/toolbar-icon.svg);
+    background-image: url(../../assets/toolbar-icon.svg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
@@ -22,7 +22,7 @@
 
 .ce-toolbar__tools li:hover .cdx-personality-icon,
 .ce-toolbar__tools .selected .cdx-personality-icon {
-    background-image: url(../svg/toolbar-icon-hover.svg);
+    background-image: url(../../assets/toolbar-icon-hover.svg);
 }
 
 /**
@@ -35,6 +35,7 @@
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.03);
     border-radius: 3px;
     padding: 30px;
+    margin: 0.7em 0;
 }
 
 /**
@@ -56,7 +57,7 @@
  */
 .cdx-personality__name {
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 /**
@@ -76,6 +77,7 @@
     font-size: 11px;
     color: var(--grayText);
     letter-spacing: 0.1px;
+    text-overflow: ellipsis;
 }
 
 /**
@@ -88,7 +90,7 @@
     height: 70px;
     border-radius: 3px;
     background-color: #f6f6f9;
-    background-image: url('../svg/photo-placeholder.svg');
+    background-image: url('../../assets/photo-placeholder.svg');
     background-repeat: no-repeat;
     background-position: center center;
     cursor: pointer;
