--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -101,6 +101,10 @@
     overflow: hidden;
 }
 
+.cdx-personality__photo:hover {
+    opacity: 0.7;
+}
+
 .cdx-personality__photo img {
     width: 100%;
     height: 100%;
